# aoc2022

./: .gitignore
day01/: CMakeLists.txt  main.cpp  utils_stringview.h
day02/: main.cpp  utils.h
day04/: CMakeLists.txt  main.cpp
day05/: main.cpp
day06/: main.cpp
day07/: main.cpp  utils.h
day08/: main.cpp  utils.h
day09/: CMakeLists.txt  main.cpp  utils_console.h
day10/: main.cpp  utils_stringview.h
day11/: main.cpp  utils.h
day12/: main.cpp
day13/: main.cpp  utils.h
